tests/fixtures/valid/labels-and-quality.omts
{
  "omtsf_version": "0.1.0",
  "snapshot_date": "2026-02-22",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "org-labelled-a",
      "type": "organization",
      "name": "Labelled Corp A",
      "labels": [
        { "key": "region", "value": "eu" },
        { "key": "high-risk" }
      ],
      "data_quality": {
        "confidence": "verified",
        "source": "gleif-api",
        "last_verified": "2026-01-15"
      }
    },
    {
      "id": "org-labelled-b",
      "type": "organization",
      "name": "Labelled Corp B",
      "labels": [
        { "key": "sector", "value": "manufacturing" },
        { "key": "tier-1-supplier" }
      ],
      "data_quality": {
        "confidence": "reported",
        "source": "supplier-portal"
      }
    },
    {
      "id": "org-inferred",
      "type": "organization",
      "name": "Inferred Corp",
      "data_quality": {
        "confidence": "inferred",
        "source": "web-scraping"
      }
    },
    {
      "id": "org-estimated",
      "type": "organization",
      "name": "Estimated Corp",
      "data_quality": {
        "confidence": "estimated"
      }
    }
  ],
  "edges": []
}
