tests/fixtures/invalid/bad-boundary-ref.omts
{
  "omts_version": "0.1.0",
  "snapshot_date": "2026-02-18",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "bref-001",
      "type": "boundary_ref",
      "name": "Redacted Entity",
      "identifiers": [
        { "scheme": "opaque", "value": "e8798687b081da98b7cd1c4e5e2423bd3214fbab0f1f476a2dcdbf67c2e21141" },
        { "scheme": "lei", "value": "5493006MHB84DD0ZWV18" }
      ]
    }
  ],
  "edges": []
}
